--- a/TheMovieDatabaseBrowser/Base.lproj/Main.storyboard
+++ b/TheMovieDatabaseBrowser/Base.lproj/Main.storyboard
@@ -32,10 +32,10 @@
             </objects>
             <point key="canvasLocation" x="-38" y="-630"/>
         </scene>
-        <!--Detail-->
+        <!--Film Details-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="TheMovieDatabaseBrowser" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Film Details" id="JEX-9P-axG" customClass="DetailViewController" customModule="TheMovieDatabaseBrowser" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SYR-Wa-9uf"/>
                         <viewControllerLayoutGuide type="bottom" id="GAO-Cl-Wes"/>
@@ -121,7 +121,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="Film Details" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="movieDetailsTextView" destination="oT8-XZ-2ZJ" id="fKu-pc-Geq"/>
                         <outlet property="moviePosterImageView" destination="Hlx-d2-Gtp" id="FbL-MU-hhL"/>
@@ -240,7 +240,7 @@
                             <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Master" id="Zdf-7t-Un8"/>
+                    <navigationItem key="navigationItem" id="Zdf-7t-Un8"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
@@ -264,6 +264,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
 </document>
